[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythonautogui"
version = "0.0.1"
authors = [
  { name="Zachary Smith", email="zachsmith.dev@gmail.com" },
]
description = "Generate a Tkinter GUI from any Python program"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Cutwell/python-auto-gui"
"Bug Tracker" = "https://github.com/Cutwell/python-auto-gui/issues"